ASSIGNMENt-8/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:57:22 **** Incremental Build of configuration Debug for project Q.4 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:93:8: warning: implicit declaration of function 'lcd16x2_i2c_init' [-Wimplicit-function-declaration]
   93 |   if (!lcd16x2_i2c_init(&hi2c1))
      |        ^~~~~~~~~~~~~~~~
../Core/Src/main.c:111:25: warning: implicit declaration of function 'lcd16x2_i2c_clear' [-Wimplicit-function-declaration]
  111 |                         lcd16x2_i2c_clear();
      |                         ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:112:25: warning: implicit declaration of function 'lcd16x2_i2c_setCursor' [-Wimplicit-function-declaration]
  112 |                         lcd16x2_i2c_setCursor(1, 0);
      |                         ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:114:25: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
  114 |                         sprintf(str, "%d", i);
      |                         ^~~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'sprintf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:114:25: warning: incompatible implicit declaration of built-in function 'sprintf' [-Wbuiltin-declaration-mismatch]
  114 |                         sprintf(str, "%d", i);
      |                         ^~~~~~~
../Core/Src/main.c:114:25: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../Core/Src/main.c:115:25: warning: implicit declaration of function 'lcd16x2_i2c_printf' [-Wimplicit-function-declaration]
  115 |                         lcd16x2_i2c_printf(str);
      |                         ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:181:13: error: invalid storage class for function 'MX_I2C1_Init'
  181 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:215:13: error: invalid storage class for function 'MX_GPIO_Init'
  215 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:246:1: error: expected declaration or statement at end of input
  246 | }
      | ^
../Core/Src/main.c:246:1: error: expected declaration or statement at end of input
../Core/Src/main.c:246:1: error: expected declaration or statement at end of input
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_I2C1_Init' used but never defined
   52 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:237:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  237 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:215:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  215 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:181:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  181 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:135:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  135 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
10:08:44 **** Build of configuration Debug for project A8.Q3 ****
make -j12 all 
arm-none-eabi-gcc -o "A8.Q3.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\stmprojects\ASSIGNMENT 8\A8.Q3\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="A8.Q3.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: A8.Q3.elf
 
arm-none-eabi-size  A8.Q3.elf 
arm-none-eabi-objdump -h -S A8.Q3.elf  > "A8.Q3.list"
   text	   data	    bss	    dec	    hex	filename
   9764	     12	   1660	  11436	   2cac	A8.Q3.elf
Finished building: default.size.stdout
 
Finished building: A8.Q3.list
 
